<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zeus.migue.crosswordshelper.main.MainActivity">

    <EditText
        android:id="@+id/dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_words_dictionary_placeholder"
        android:singleLine="true"
        android:textSize="30sp"
        android:inputType="textShortMessage"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_expression_placeholder"
        android:textSize="30sp"
        android:singleLine="true"
        android:inputType="textShortMessage"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_calculate_button_text"/>

    <Button
        android:id="@+id/get_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_get_all_text"/>

    <EditText
        android:id="@+id/balanced_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_balanced_parentheses_placeholder"
        android:textSize="30sp"
        android:singleLine="true"
        android:inputType="number"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/calculate_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_button_calculate_balanced_parentheses"/>

</LinearLayout>
